# sdk_support

./: CMakeLists.txt
hardware/: CMakeLists.txt
hardware/kit/common/bsp/: CMakeLists.txt
platform/CMSIS/: CMakeLists.txt
platform/Device/: CMakeLists.txt
platform/emlib/: CMakeLists.txt
platform/halconfig/: CMakeLists.txt
protocol/: CMakeLists.txt
